# FRVN

./: LICENSE  Makefile  README.md  docker-compose.dev.yml
cli/: Dockerfile  README.md  pyproject.toml
cli/frvn/: __main__.py
cli/frvn/resources/deploy/: deploy_gcp_cloudrun.sh  deploy_gcp_vm.sh
cli/frvn/resources/deploy/lib/: gcp_common.sh
cli/frvn/resources/template/: .envexample  README.md  docker-compose.dev.yml  docker-compose.prod.yml  ruff.toml
cli/frvn/resources/template/backend/: Dockerfile.backend  docker-entrypoint.sh  requirements.txt  supervisord.conf
cli/frvn/resources/template/backend/app/: main.py
cli/frvn/resources/template/backend/app/core/: config.py  logging.py
cli/frvn/resources/template/backend/nginx/: nginx.conf.template
cli/frvn/resources/template/frontend/: Dockerfile.frontend  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
cli/frvn/resources/template/frontend/src/: App.tsx  main.tsx
docs/: deploy.md  ops.md  quickstart.md
scripts/tests/: test_e2e.py
template/: .envexample  .pre-commit-config.yaml  README.md  deploy.md  docker-compose.prod.yml  ruff.toml
template/backend/: Dockerfile.backend  docker-entrypoint.sh  requirements.txt  supervisord.conf
template/backend/app/: main.py
template/backend/app/core/: config.py  logging.py
template/backend/nginx/: nginx.conf.template
template/frontend/: .eslintrc.cjs  .prettierrc.json  Dockerfile.frontend  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
template/frontend/src/: App.tsx
