[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "frvn"
version = "0.1.0"
description = "FRVN: FastAPI+React+Vite+Nginx template initializer"
authors = [{ name = "FRVN Maintainers" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []
license = { text = "MIT" }

[project.scripts]
frvn = "frvn.__main__:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
frvn = ["resources/**"]


